Fix footer sizing issue on FireFox mobile view

--- a/styles/default.css
+++ b/styles/default.css
@@ -382,6 +382,7 @@ footer {
   margin-top: auto;
   padding: .4rem 0px;
   max-width: 100%;
+  max-height: 100%;
   display: flex;
   flex-direction: column;
 }
